--- a/Installer/conclusion.html
+++ b/Installer/conclusion.html
@@ -4,7 +4,7 @@
 	<title></title>
 </head>
 <body>
-	<h1>BlackHole: Audio Loopback Driver</h1>
+	<h1>Nutshell: Audio Loopback Driver</h1>
 
 	<h2>Donate</h2>
 	<p>If you find this software useful please <a href="https://github.com/sponsors/ExistentialAudio">sponsor Existential Audio on GitHub.</a></p>
